V-2.1 fixed works button -> Hide/Visible

--- a/api3_covid/style.css
+++ b/api3_covid/style.css
@@ -27,3 +27,11 @@ button {
   background-color: rgb(228, 171, 102);
   margin: 20px;
 }
+.statistic {
+  display: flex;
+  flex-flow: column;
+  border: 1px solid dimgray;
+}
+.hidden {
+  display: none;
+}
